# connemara

./: .gitignore  README.md  setup.py
connemara_python/: .gitignore  README.md  setup.py
connemara_python/connemara/: post_data.py  restore.py  schema_dump.py
connemara_python/connemara/sqlparser/: __init__.py  parser.py  pglast_overrides.py  remappers.py
connemara_python/connemara/tests/sqlparser/: test_parser.py
connemara_python/debian/: changelog  control
connemara_replication/: .gitignore  CMakeLists.txt  README.txt
connemara_replication/src/: connemara_replication.c  connemara_replication.h  log.c  log.h  main.c
connemara_replication/tests/: connemara_basic_test.c
debian/: changelog  control  copyright  rules
docs/: architecture.rst  conf.py  index.rst
replayer/: connemara_fixer.pl  connemara_reindex.bash  connemara_reindex.sh  connemara_replay.pl  connemara_rewrite.pm
